l10n: Bug 713512 - Please help to fix the overflow problem of whatsnew page in zh-CN version, part 2
git-svn-id: svn+ssh://svn.mozilla.org/projects/mozilla.com/trunk@99598 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/style/l10n/fx4-fistrun-fallback.css
+++ b/style/l10n/fx4-fistrun-fallback.css
@@ -12,9 +12,6 @@ body {
     color: #444444;
     font-family: Georgia,serif;
     line-height: 1.4em;
-/*
-    overflow:hidden;
-*/
 }
 
 h1, h2, h3, h4, h5, h6 {
